--- a/index.html
+++ b/index.html
@@ -12,35 +12,66 @@
     <title>Weather Dashboard</title>
 </head>
 
-<body></body>
+<body>
 
     <h1>Weather Dashboard</h1>
+    <div class="container-fluid">
         <div class="row">
-          <div class="col-md-5">
-            <h2>Search for a City:</h2>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control col-md-5" id="cityInput" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+            <div class="col-sm-5">
+                <h2>Search for a City:</h2>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control col-md-5" id="cityInput" aria-label="Default"
+                        aria-describedby="inputGroup-sizing-default">
+                </div>
+                <button type="button" class="btn btn-primary col-md-5" id='searchBtn'>Search</button>
+                <ul>
+
+                </ul>
             </div>
-            <button type="button" class="btn btn-primary col-md-5" id='searchBtn'>Search</button>
-          </div>
-          <div class="col-md-7 container">
-            <p>City that displays</p>
-          </div>
-        </div>
-    
+            <div class="col-sm-7">
+                <!-- forecast -->
+                <div class='.container-fluid'>
+                    <div class='row'>
+                        <!--current weather-->
+                        <div class='col-1'>
+                            <div class="card" style="width: 18rem;">
+                                <div class="card-body">
+                                    <h3> <span id='searchedCityName'></span>append city name with data as text context</h3>
+                                    <p>Temp: <span id='tempOfSearchedCity'></span></p>
+                                    <p>Wind: <span id='windOfSearchedCity'></span></p>
+                                    <p>Humidity: <span id='humidityOfSearchedCity'></span></p>
+                                    <p>UV Index: <span id='uvIndexOfSearchedCity'></span></p>
+                                </div>
+                            </div>
 
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <script src='script.js'></script>
+
+
+
+
+
+                            <!--future forecast-->
+
+
+
+                        </div>
+                    </div>
+                </div>
+
+                <!--future forecast-->
+
+
+                <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+                    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                    crossorigin="anonymous"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+                    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+                    crossorigin="anonymous"></script>
+                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+                    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+                    crossorigin="anonymous"></script>
+                <script src='script.js'></script>
 </body>
 
 </html>
