--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
                     <div class='row'>
                         <!--current weather-->
-                        <div class='col-2'>
-                            <div class="card" style="width: 18rem;">
+                        <div class='col-sm mb-4'>
+                            <div class="card col-sm-8">
                                 <div class="card-body">
                                     <h3> <span id='searchedCityName'></span>append city name with data as text context
                                     </h3>
@@ -47,10 +47,11 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="row">
 
                         <!--Five Day future forecast-->
-                        
+
                         <div class="col-2 offset-sm-1">
                             <div class="card">
                                 <div class="card-body">
@@ -111,8 +112,6 @@
                             </div>
                         </div>
 
-
-                        <!--future forecast-->
 
 
 
