--- a/index.html
+++ b/index.html
@@ -28,95 +28,98 @@
 
                 </ul>
             </div>
-            <div class="col-sm-8">
+
+            <div class="col-sm-8 flexDisplay">
                 <!-- forecast -->
-                <div class='.container-fluid'>
 
-                    <div class='row'>
-                        <!--current weather-->
-                        <div class='col-sm mb-4'>
-                            <div class="card col-sm-8">
-                                <div class="card-body">
-                                    <h3> <span id='searchedCityName'></span>append city name with data as text context
-                                    </h3>
-                                    <p>Temp: <span id='tempOfSearchedCity'></span> F</p>
-                                    <p>Wind: <span id='windOfSearchedCity'></span> MPH</p>
-                                    <p>Humidity: <span id='humidityOfSearchedCity'></span> %</p>
-                                    <p>UV Index: <span id='uvIndexOfSearchedCity'></span></p>
-                                </div>
-                            </div>
+                <div class='row'>
+                    <!--current weather-->
+                    <div class="card currentDisplay">
+                        <div class="card-body">
+                            <h3> <span id='searchedCityName'></span>append city name with data as text context
+                            </h3>
+                            <p>Temp: <span id='tempOfSearchedCity'></span> F</p>
+                            <p>Wind: <span id='windOfSearchedCity'></span> MPH</p>
+                            <p>Humidity: <span id='humidityOfSearchedCity'></span> %</p>
+                            <p>UV Index: <span id='uvIndexOfSearchedCity'></span></p>
                         </div>
-                    </div>
-
-                    <div class="row">
-
-                        <!--Five Day future forecast-->
-
-                        <div class="col-2 offset-sm-1">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5> <span id='FiveDayForecastCityOne'></span>append date
-                                    </h5>
-                                    <p>Temp: <span id='FiveDayForecastOneTemp'></span> F</p>
-                                    <p>Wind: <span id='FiveDayForecastOneWind'></span> MPH</p>
-                                    <p>Humidity: <span id='FiveDayForecastOneHumidity'></span> %</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-2">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5> <span id='FiveDayForecastCityTwo'></span>append date
-                                    </h5>
-                                    <p>Temp: <span id='FiveDayForecastTwoTemp'></span> F</p>
-                                    <p>Wind: <span id='FiveDayForecastTwoWind'></span> MPH</p>
-                                    <p>Humidity: <span id='FiveDayForecastTwoHumidity'></span> %</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-2">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5> <span id='FiveDayForecastCityThree'></span>append date
-                                    </h5>
-                                    <p>Temp: <span id='FiveDayForecastThreeTemp'></span> F</p>
-                                    <p>Wind: <span id='FiveDayForecastThreeWind'></span> MPH</p>
-                                    <p>Humidity: <span id='FiveDayForecastThreeHumidity'></span> %</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-2">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5> <span id='FiveDayForecastCityFour'></span>append date
-                                    </h5>
-                                    <p>Temp: <span id='FiveDayForecastFourTemp'></span> F</p>
-                                    <p>Wind: <span id='FiveDayForecastFourWind'></span> MPH</p>
-                                    <p>Humidity: <span id='FiveDayForecastFourHumidity'></span> %</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-2">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5> <span id='FiveDayForecastCityFive'></span>append date
-                                    </h5>
-                                    <p>Temp: <span id='FiveDayForecastFiveTemp'></span> F</p>
-                                    <p>Wind: <span id='FiveDayForecastFiveWind'></span> MPH</p>
-                                    <p>Humidity: <span id='FiveDayForecastFiveHumidity'></span> %</p>
-                                </div>
-                            </div>
-                        </div>
-
-
-
-
                     </div>
                 </div>
+
+                <div class="row">
+
+                    <!--Five Day future forecast-->
+
+                    <div class="col-2 offset-sm-1">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5> <span id='forecast-title-0'></span>append date
+                                </h5>
+                                <img src>
+                                <p>Temp: <span id='temp-tag-0'></span> F</p>
+                                <p>Wind: <span id='wind-tag-0'></span> MPH</p>
+                                <p>Humidity: <span id='humidity-tag-0'></span> %</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-2">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5> <span id='forecast-title-1'></span>append date
+                                </h5>
+                                <img src>
+                                <p>Temp: <span id='temp-tag-1'></span> F</p>
+                                <p>Wind: <span id='wind-tag-1'></span> MPH</p>
+                                <p>Humidity: <span id='humidity-tag-1'></span> %</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-2">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5> <span id='forecast-title-2'></span>append date
+                                </h5>
+                                <img src>
+                                <p>Temp: <span id='temp-tag-2'></span> F</p>
+                                <p>Wind: <span id='wind-tag-2'></span> MPH</p>
+                                <p>Humidity: <span id='humidity-tag-2'></span> %</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-2">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5> <span id='forecase-title-3'></span>append date
+                                </h5>
+                                <img src>
+                                <p>Temp: <span id='temp-tag-3'></span> F</p>
+                                <p>Wind: <span id='wind-tag-3'></span> MPH</p>
+                                <p>Humidity: <span id='humidity-tag-3'></span> %</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-2">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5> <span id='forecast-title-4'></span>append date
+                                </h5>
+                                <img src>
+                                <p>Temp: <span id='temp-tag-4'></span> F</p>
+                                <p>Wind: <span id='wind-tag-4'></span> MPH</p>
+                                <p>Humidity: <span id='humidity-tag-4'></span> %</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+                </div>
+
             </div>
 
             <!--future forecast-->
