completed reformatting search and input, need to add history under search

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-4" id="searchColumn">
-                <h2>Search for a City:</h2>
+                <h4>Search for a City:</h4>
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control col-md-5" id="cityInput" aria-label="Default"
+                    <input type="text" class="form-control" id="cityInput" aria-label="Default"
                         aria-describedby="inputGroup-sizing-default">
                 </div>
-                <button type="button" class="btn btn-primary col-md-5" id='searchBtn'>Search</button>
+                <button type="button" class="btn btn-primary col-md-12" id='searchBtn'>Search</button>
                 <ul class='history'>
                     <li class='historyBtn'></li>
                     <li class='historyBtn'></li>
