getting history to display

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                 </div>
                 <button type="button" class="btn btn-primary col-md-12" id='searchBtn'>Search</button>
                 <ul class='history'>
-                    <li class='historyBtn'></li>
-                    <li class='historyBtn'></li>
-                    <li class='historyBtn'></li>
-                    <li class='historyBtn'></li>
-                    <li class='historyBtn'></li>
-                    <li class='historyBtn'></li>
-                    <li class='historyBtn'></li>
-                    <li class='historyBtn'></li>
+                    <li class='.historyBtn'></li>
+                    <li class=></li>
+                    <li class=></li>
+                    <li class=></li>
+                    <li class=></li>
+                    <li class=></li>
+                    <li class=></li>
+                    <li class=></li>
                 </ul>
             </div>
            
